// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`divider using div 1`] = `
<div
  className="pf-c-divider"
  role="separator"
/>
`;

exports[`divider using hr 1`] = `
<hr
  className="pf-c-divider"
/>
`;

exports[`divider using li 1`] = `
<li
  className="pf-c-divider"
  role="separator"
/>
`;

exports[`vertical divider 1`] = `
<div
  className="pf-l-flex"
>
  <FlexItem>
    first item
  </FlexItem>
  <Divider
    isVertical={true}
  />
  <FlexItem>
    second item
  </FlexItem>
</div>
`;
